updated token count to 512

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "whatsapp-chatgpt-bot",
   "version": "1.0.0",
-  "description": "",
+  "description": "A whatsapp Bot to interact with ChatGPT using the OpenAi's API, deployed on cyclic.app",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
